deploy/kubernetes/test_app/02-akka-cluster.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: accounts
  name: accounts
  namespace: accounts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
        actorSystemName: accounts
    spec:
      containers:
        - name: accounts
          image: 830835002888.dkr.ecr.eu-central-1.amazonaws.com/akka-metrics-test-app:latest
          ports:
            - name: remoting
              containerPort: 2551
              protocol: TCP
            - name: management
              containerPort: 8558
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
