deploy/kubernetes/test_app/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: testapp-service
  namespace: accounts
spec:
  selector:
    app: accounts
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
